fix some bugs in greeting parallax

--- a/src/index.pug
+++ b/src/index.pug
@@ -21,21 +21,21 @@ html(lang="ru")
           .greeting-parallax
             .greeting-parallax__layer(data-speed="0.01")
               +image("parallax/mountain-baloon/layer-0.jpg", "greeting-parallax__image", "Слой для параллакса")
-            .greeting-parallax__layer(data-speed="0.12")
+            .greeting-parallax__layer(data-speed="0.02")
               +image("parallax/mountain-baloon/layer-1.png", "greeting-parallax__image", "Слой для параллакса")
-            .greeting-parallax__layer(data-speed="0.18")
+            .greeting-parallax__layer(data-speed="0.03")
               +image("parallax/mountain-baloon/layer-2.png", "greeting-parallax__image", "Слой для параллакса")
-            .greeting-parallax__layer(data-speed="0.22")
+            .greeting-parallax__layer(data-speed="0.04")
               +image("parallax/mountain-baloon/layer-3.png", "greeting-parallax__image", "Слой для параллакса")
-            .greeting-parallax__layer(data-speed="0.26")
+            .greeting-parallax__layer(data-speed="0.05")
               +image("parallax/mountain-baloon/layer-4.png", "greeting-parallax__image", "Слой для параллакса")
-            .greeting-parallax__layer(data-speed="0.3")
+            .greeting-parallax__layer(data-speed="0.06")
               +image("parallax/mountain-baloon/layer-5.png", "greeting-parallax__image", "Слой для параллакса")
-            .greeting-parallax__layer(data-speed="0.8")
+            .greeting-parallax__layer(data-speed="0.07")
               +image("parallax/mountain-baloon/layer-6.png", "greeting-parallax__image", "Слой для параллакса")
-            .greeting-parallax__bg
+            .greeting-parallax__bg(data-speed="0.07")
             
-            .greeting-parallax__content
+            .greeting-parallax__content(data-speed="0.1")
               //- hero section
               section.hero.fullscreen-section#hero
                 .container.hero__container
@@ -119,8 +119,6 @@ html(lang="ru")
             polygon(points="0,0 0,100 1000,100")
           svg.triangles-greeting__item.triangles-greeting__item--right(viewBox="0 0 1000 100" preserveAspectRatio="none")
             polygon(points="0,100 1000,100 1000,0")
-
-
 
 
 
