--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -13,10 +13,10 @@ body,
 html {
   height: 100%;
 }
-
+/* 
 ::-webkit-scrollbar { 
     display: none; 
-}
+} */
 
 body {
   font-family: 'Open Sans', Helvetica, sans-serif;
