--- a/src/index.pug
+++ b/src/index.pug
@@ -36,6 +36,8 @@ html(lang="ru")
             .greeting-parallax__bg(data-speed="0.07")
             
             .greeting-parallax__content(data-speed="0.09")
+
+            
               //- hero section
               section.hero.fullscreen-section#hero
                 .container.hero__container
@@ -123,40 +125,7 @@ html(lang="ru")
 
 
         //- skills section
-        - 
-          var stackItems = [
-            ['Front-end', ['HTML5', 'CSS3', 'JavaScript', 'jQuery и Vue.js']],
-            ['Workflow', ['GIT', 'Terminal', 'Gulp', 'Webpack']]
-          ]
-
         section.skills#skills
-            .container.skills__container
-              .skills__content-wrapper
-                h2.title.title--skills.skills__title Чем я могу быть полезен вам
-                .skills__content
-                  .skills__content-charts
-                    .skills__desc-block
-                      span.skills__desc Этот сайт я сделал в рамках обучения в Школе онлайн образования 
-                      span.skills__desc LoftSchool. Чуть позже я освежу в нём свой контент. 
-                      span.skills__desc А пока посмотрите, как тут всё классно и красиво!
-                    ul.skills__stack-list
-                      each stackRow in stackItems
-                        li.stack.skills__stack-item
-                          h3.stack-row__title #{stackRow[0]}
-                          ul.stack-row__list
-                            each skill in stackRow[1]
-                              li.skill.stack-row__item
-                                .skill__wrapper
-                                  svg.skill__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
-                                    defs
-                                      linearGradient#circle-gradient(x1="0%" y1="0%" x2="0%" y2="100%")
-                                        stop(offset="0%" stop-color="#ad00ed")
-                                        stop(offset="100%" stop-color="#5500f2")
-                                    circle.skill__circle.skill__circle--under(cx="50" cy="50" r="40")
-                                    circle.skill__circle.skill__circle--above(cx="50" cy="50" r="40" stroke="url(#circle-gradient)")
-                                  span.skill__title #{skill}
-        
-
 
         //- works section
         - var workItems = [1, 2, 3, 4, 5]
@@ -310,3 +279,5 @@ html(lang="ru")
                   .quote__text
                     p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает, где вы живете
                   cite.quote__author Martin Golding  
+
+    include ./templates/entry.pug
