--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -1,11 +1,5 @@
 script(type="text/x-template")#skills-template
 
-  - 
-    var stackItems = [
-      ['Front-end', ['HTML5', 'CSS3', 'JavaScript', 'jQuery и Vue.js']],
-      ['Workflow', ['GIT', 'Terminal', 'Gulp', 'Webpack']]
-    ]
-
   .container.skills__container
     .skills__content-wrapper
       h2.title.title--skills.skills__title Чем я могу быть полезен вам
@@ -16,18 +10,34 @@ script(type="text/x-template")#skills-template
             span.skills__desc LoftSchool. Чуть позже я освежу в нём свой контент. 
             span.skills__desc А пока посмотрите, как тут всё классно и красиво!
           ul.skills__stack-list
-            each stackRow in stackItems
-              li.stack.skills__stack-item
-                h3.stack-row__title #{stackRow[0]}
-                ul.stack-row__list
-                  each skill in stackRow[1]
-                    li.skill.stack-row__item
-                      .skill__wrapper
-                        svg.skill__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
-                          defs
-                            linearGradient#circle-gradient(x1="0%" y1="0%" x2="0%" y2="100%")
-                              stop(offset="0%" stop-color="#ad00ed")
-                              stop(offset="100%" stop-color="#5500f2")
-                          circle.skill__circle.skill__circle--under(cx="50" cy="50" r="40")
-                          circle.skill__circle.skill__circle--above(cx="50" cy="50" r="40" stroke="url(#circle-gradient)")
-                        span.skill__title #{skill}
+            li.skills__stack-item(v-for="skill in skills" :key="skill.skillsGroup")
+              stackRow(
+                :skill="skill"
+              )
+
+script(type="text/x-template")#stack-row-template
+  .stack-row
+    h3.stack-row__title {{skill.skillsGroup}}
+    ul.stack-row__list
+      li.stack-row__item(v-for="(skillPercent, skillName) in skill.skills")
+        skill(
+          :skillName="skillName"
+          :skillPercent="skillPercent"
+        )
+
+script(type="text/x-template")#skill-template
+  .skill
+    .skill__wrapper
+      svg.skill__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
+        defs
+          linearGradient#circle-gradient(x1="0%" y1="0%" x2="0%" y2="100%")
+            stop(offset="0%" stop-color="#5500f2")
+            stop(offset="100%" stop-color="#ad00ed")
+        circle.skill__circle.skill__circle--under(cx="50" cy="50" r="40")
+        circle.skill__circle.skill__circle--above(
+            cx="50" cy="50" r="40"
+            ref="color-circle"
+            stroke="url(#circle-gradient)"
+            transform='rotate(180 50 50)'
+          )
+      span.skill__title {{skillName}}
