--- a/src/styles/blocks/greeting-parallax.pcss
+++ b/src/styles/blocks/greeting-parallax.pcss
@@ -1,7 +1,11 @@
 .greeting-parallax {
-  position: relative;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  height: 135vh;
+  z-index: -10;
 }
 
 .greeting-parallax__layer {
@@ -24,40 +28,47 @@
   &:nth-child(2) {
     .greeting-parallax__image {
       width: 100%;
-      top: 10%;
+      top: 40%;
+
+      @include big-tablets {
+        top: 60%;
+      }
     }
   }
 
   /* baloon */
   &:nth-child(3) {
     .greeting-parallax__image {
-      top: 50%;
+      top: 518PX;
       left: 50%;
-      margin-left: 4%;
-      margin-top: -25%;
+      margin-left: 12%;
     }
   }
 
   /* clouds */
   &:nth-child(4) {
     .greeting-parallax__image {
-      top: 35%;
+      top: 610PX;
+      left: 0;
     }
   }
 
   /* man */
   &:nth-child(5) {
     .greeting-parallax__image {
-      /* top: 30%; */
       left: 0;
-      bottom: 10%;
+      top: 60%;
+
+      @include big-tablets {
+        top: 70%;
+      }
     }
   }
 
   /* closest mountain */
   &:nth-child(6) {
     .greeting-parallax__image {
-      bottom: 0;
+      bottom: -600PX;
       right: 0;
     }
   }
@@ -66,7 +77,18 @@
   &:nth-child(7) {
     .greeting-parallax__image {
       left: 0;
-      bottom: -200px;
+      bottom: -50%;
+      height: 70%;
+      width: 100%;
+
+      @include mini-desktop {
+        bottom: -40%;
+        height: 60%;
+      }
+
+      @include big-tablets {
+        height: 55%;
+      }
     }
   }
 }
