enable parallax only for tablets and more

--- a/src/styles/blocks/greeting-parallax.pcss
+++ b/src/styles/blocks/greeting-parallax.pcss
@@ -6,6 +6,10 @@
   height: 100%;
   overflow: hidden;
   z-index: -10;
+
+  @include less-than-tablets {
+    display: none;
+  }
 }
 
 .greeting-parallax__layer {
