--- a/src/styles/blocks/greeting.pcss
+++ b/src/styles/blocks/greeting.pcss
@@ -1,5 +1,10 @@
 .greeting {
-  /* background: url('../images/bg/mountain-baloon.jpg') center center no-repeat; */
+  background-position: center center;
+  background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+
+  @include less-than-tablets {
+    background-image: url('../images/bg/mountain-baloon.jpg');
+  }
 }
