add layers to budda parallax

--- a/src/index.pug
+++ b/src/index.pug
@@ -133,9 +133,23 @@ html(lang="ru")
             polygon(points="0,0 500,100 1000,0")
 
 
-
-
         .reviews-contacts-block
+
+          .rev-cont-parallax
+            .rev-cont-parallax__layer(data-speed="0")
+              +image("parallax/budda/layer-1.jpg", "rev-cont-parallax__image", "Слой для параллакса")
+            .rev-cont-parallax__layer(data-speed="0.3")
+              +image("parallax/budda/layer-2.png", "rev-cont-parallax__image", "Слой для параллакса")
+            .rev-cont-parallax__layer(data-speed="0.4")
+              +image("parallax/budda/layer-3.png", "rev-cont-parallax__image", "Слой для параллакса")
+            .rev-cont-parallax__layer(data-speed="0.7")
+              +image("parallax/budda/layer-4.png", "rev-cont-parallax__image", "Слой для параллакса")
+            .rev-cont-parallax__layer(data-speed="0.7")
+              +image("parallax/budda/layer-5.png", "rev-cont-parallax__image", "Слой для параллакса")
+            .rev-cont-parallax__layer(data-speed="0.7")
+              +image("parallax/budda/layer-6.png", "rev-cont-parallax__image", "Слой для параллакса")
+
+            
           .container
 
             //- reviews-section
