--- a/src/styles/blocks/reviews-contacts-block.pcss
+++ b/src/styles/blocks/reviews-contacts-block.pcss
@@ -1,4 +1,7 @@
 .reviews-contacts-block {
-  background: url('../images/bg/budda.jpg') center center no-repeat;
+  /* background: url('../images/bg/budda.jpg'); */
+  background-position: center center;
+  background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
