realize works slider

--- a/src/styles/blocks/reviews-contacts-block.pcss
+++ b/src/styles/blocks/reviews-contacts-block.pcss
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  z-index: -1;
 
   @include less-than-tablets {
     background-image: url('../images/bg/budda.jpg');
