--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -34,7 +34,7 @@
   min-width: 320px;
 
   &::before {
-    content: "1";
+    content: attr(slideIndex);
     display: block;
     position: absolute;
     top: 0;
