--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -1,17 +1,4 @@
 script(type="text/x-template")#works-component
-
-  - var workItems = [1, 2, 3, 4, 5]
-  - 
-    var previewsPath = [
-    'content/work-previews/1.jpg',
-    'content/work-previews/2.jpg',
-    'content/work-previews/3.jpg',
-    'content/work-previews/4.jpg',
-    'content/work-previews/5.jpg',
-    ]
-
-  - var techList = ['HTML', 'CSS', 'JavaScript']
-  
   section.works
     .container.works__container
       .works__content-wrapper
@@ -20,26 +7,67 @@ script(type="text/x-template")#works-component
           .works__slider
             ul.works__slider-list
               li.works__slider-item
-                .works__preview-block
-                  .works__preview-img-wrapper
-                    +image(previewsPath[0], "works__preview-img", "Превью работы")
-                    ul.works__preview-list
-                      each item, index in workItems
-                        - var activeClass = index === 0 ? 'works__preview-item--active': ''
-                        li(class=`works__preview-item works__preview-item-${item} ${activeClass}`)
-                          button(type="button").works__preview-item-btn
-                            +image(previewsPath[index], "works__preview-item-img", "Миниатюрное превью работы")
-                  .works__slider-arrows
-                    button(type="button").works__slider-btn.works__slider-btn--up
-                      +icon('arrow-down', 'arrow arrow--up')
-                    button(type="button").works__slider-btn.works__slider-btn--down
-                      +icon('arrow-down', 'arrow arrow--down')
-                .works__desc-block
-                  ul.works__tech-list
-                    each item in techList
-                      li.tech.works__tech-item #{item}
-                  .works__desc
-                    h3.works__desc-title Сайт школы образования
-                    .works__desc-text 
-                      p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                  a(href="#" target="_blank").works__link Посмотреть сайт
+                display(
+                  :works="works"
+                  :currentWork="currentWork"
+                  :currentIndex="currentIndex"
+                  @slide="handleSlide"
+                  @thumbClick="handleThumbClick"
+                )
+                info(
+                  :currentWork="currentWork"
+                )
+
+script(type="text/x-template")#display-component
+  .works__preview-block(:slideIndex="currentIndex + 1")
+    .works__preview-img-wrapper
+      img(:src="currentWork.photo" alt="Превью работы").works__preview-img
+      thumbsList(
+        :works="works"
+        :currentWork="currentWork"
+        @thumbClick="index => $emit('thumbClick', index)"
+      )
+    btns(
+      @slide="direction => $emit('slide', direction)"
+    )
+
+
+
+script(type="text/x-template")#slider-btns
+  .works__slider-arrows
+    button(type="button" @click="$emit('slide', 'prev')").works__slider-btn.works__slider-btn--up
+      +icon('arrow-down', 'arrow arrow--up')
+    button(type="button"  @click="$emit('slide', 'next')").works__slider-btn.works__slider-btn--down
+      +icon('arrow-down', 'arrow arrow--down')
+
+
+
+script(type="text/x-template")#thumbs-list
+  ul.works__preview-list
+    li.works__preview-item(
+      v-for="(work, index) in works" :key="index",
+      :class="{ 'works__preview-item--active': currentWork.id === work.id }"
+      )
+      button(type="button" @click="$emit('thumbClick', index)").works__preview-item-btn
+        img(:src="work.photo" alt="Миниатюра работы").works__preview-item-img
+
+
+
+script(type="text/x-template")#info-component
+  .works__desc-block
+    techList(
+      :skills="currentWork.skills"
+    )
+    .works__desc
+      h3.works__desc-title {{currentWork.title}}
+      .works__desc-text 
+        p {{currentWork.desc}}
+    a(:href="currentWork.link" target="_blank").works__link Посмотреть сайт
+
+
+
+script(type="text/x-template")#tech-list
+  ul.works__tech-list
+    li.tech.works__tech-item(
+      v-for="(skill, index) in skillsArray" :key="index"
+    ) {{skill}}
