--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -86,6 +86,8 @@
   bottom: 0;
   right: 0;
   height: 90%;
+  overflow: hidden;
+  width: 20%;
   box-shadow: -30px 0px 50px -10px rgba(0, 0, 0, 0.5);
 
   @include phones {
@@ -95,14 +97,13 @@
 
 .works__preview-item {
   height: 20%;
-  transition: transform 0.3s;
 
   &--active {
     border: 2px solid #f29400;
   }
 
   &:not(&--active):hover {
-    transform: scale(1.1);
+    border: 2px solid #f29400;
   }
 }
 
@@ -110,6 +111,12 @@
   width: 100%;
   height: 100%;
   outline-color: #f29400;
+}
+
+.works__preview-item-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .works__slider-arrows {
