--- a/src/admin/index.pug
+++ b/src/admin/index.pug
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-html(lang="en")
+html(lang="ru")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Portfolio | admin
+    title PY Portfolio | admin
   body
     .wrapper.admin-wrapper
-      .maincontent
+      .main-content
         #app-root
