--- a/src/admin/styles/base.pcss
+++ b/src/admin/styles/base.pcss
@@ -5,10 +5,6 @@ html {
   padding: 0;
 }
 
-::-webkit-scrollbar { 
-    display: none; 
-}
-
 body {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-size: 16px;
@@ -97,4 +93,8 @@ table {
     "content-area" 1fr
     / 1fr;
   height: 100%;
+}
+
+.hidden {
+  display: none !important;
 }
