--- a/src/admin/styles/blocks/about.pcss
+++ b/src/admin/styles/blocks/about.pcss
@@ -5,6 +5,7 @@
   background-repeat: repeat, no-repeat;
   background-size: cover, cover;
   height: auto;
+  min-height: 100vh;
   padding: 60px 0;
 }
 
