--- a/src/admin/styles/blocks/skill-card.pcss
+++ b/src/admin/styles/blocks/skill-card.pcss
@@ -3,6 +3,20 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+
+  &--edit {
+    .skill-card__title {
+      border-bottom: 1px solid #000;
+    }
+
+    .skill-card__edit-mode-btns {
+      display: inline-block;
+    }
+
+    .skill-card__read-mode-btns {
+      display: none;
+    }
+  }
 }
 
 .skill-card__heading-row {
@@ -11,6 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 
 .skill-card__heading-btns {
@@ -23,17 +38,26 @@
   font-size: 18px;
   font-weight: 600;
   color: $text-color;
-  width: 70%;
+  width: 60%;
   padding-bottom: 10px;
-  border-bottom: 1px solid #000;
+}
+
+.skill-card__edit-mode-btns {
+  display: none;
+}
+
+.skill-card__read-mode-btns {
+  display: inline-block;
 }
 
 .skill-card__table {
   width: 100%;
   flex: 1;
+  overflow: auto;
 }
 
 .skill-card__footer {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
