--- a/src/admin/styles/blocks/skill-cards.pcss
+++ b/src/admin/styles/blocks/skill-cards.pcss
@@ -6,7 +6,7 @@
 }
 
 .skill-cards__item {
-  min-height: 390px;
+  height: 390px;
   box-shadow: 4.1px 2.9px 20px 0 rgba(0, 0, 0, 0.07);
   background-color: #ffffff;
 }
