--- a/src/admin/styles/blocks/skill.pcss
+++ b/src/admin/styles/blocks/skill.pcss
@@ -1,15 +1,88 @@
+.skill__row {
+
+  &--edit {
+
+    .skill__col--title {
+      border-bottom: 1px solid #000;
+    }
+
+    .skill__col--percent {
+      border-bottom: 1px solid #000;
+    }
+
+    .skill__edit-mode-btns {
+      display: inline-block;
+    }
+
+    .skill__read-mode-btns {
+      display: none;
+    }
+  }
+}
+
 .skill__col {
-  padding: 20px 0;
+  padding-top: 15px;
+  padding-bottom: 5px;
 
   &--title {
     width: 60%;
   }
 
   &--percent {
-    width: 10%;
+    width: 45px;
+  }
+
+  &--btns {
+    display: flex;
+    justify-content: flex-end;
   }
 }
 
 .skill__input {
   border: none;
+  font-family: inherit;
+  font-size: 16px;
+  color: $text-color;
+
+  &--table {
+    width: 100%;
+  }
+
+  &--new-title {
+    width: 50%;
+    border-bottom: 1px solid #000;
+    padding-bottom: 10px;
+    margin-right: 10px;
+    padding-left: 10px;
+  }
+
+  &--new-percent {
+    width: 100%;
+  }
+}
+
+.skill__percent-block {
+  display: flex;
+  align-items: center;
+
+  &--new-skill {
+    width: 45px;
+    margin-right: 30px;
+    border-bottom: 1px solid #000;
+    padding-bottom: 9px;
+  }
+}
+
+.skill__percent-prefix {
+  font-family: inherit;
+  font-size: 16px;
+  color: rgba(65, 76, 99, 0.7);
+}
+
+.skill__edit-mode-btns {
+  display: none;
+}
+
+.skill__read-mode-btns {
+  display: inline-block;
 }
