--- a/src/admin/styles/blocks/btn.pcss
+++ b/src/admin/styles/blocks/btn.pcss
@@ -1,4 +1,9 @@
 .btn {
+  font-size: 16px;
+  font-weight: 600;
+  color: rgba(65, 76, 99, 0.5);
+
+
   &--add-skills-group {
     font-weight: 600;
     color: #383bcf;
@@ -102,4 +107,69 @@
     font-weight: 600;
     color: #fff;
   }
+
+  &--add-new-work {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, #006aed, #3f35cb);
+    color: #fff;
+  }
+
+  &--work-edit {
+    display: flex;
+    align-items: center;
+
+    &:after {
+      content: "";
+      display: inline-block;
+      width: 17px;
+      height: 17px;
+      background: svg-load("pencil.svg", fill=#383bcf, width=100%, height=100%)
+        center center no-repeat;
+      margin-left: 10px;
+    }
+  }
+
+  &--work-remove {
+    display: flex;
+    align-items: center;
+
+    &:after {
+      content: "";
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      background: svg-load("remove.svg", fill=#c92e2e, width=100%, height=100%)
+        center center no-repeat;
+      margin-left: 10px;
+    }
+  }
+}
+
+.btn__new-work-icon {
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+  border: solid 2px #ffffff;
+  border-radius: 50%;
+  position: relative;
+  margin-bottom: 20px;
+
+  &::before {
+    content: "+";
+    font-size: 72px;
+    font-weight: 300;
+    color: #fff;
+    line-height: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.btn__new-work-title {
+  font-size: 18px;
+  font-weight: bold;
+  display: block;
 }
