--- a/src/admin/styles/blocks/work-cards.pcss
+++ b/src/admin/styles/blocks/work-cards.pcss
@@ -1,11 +1,11 @@
-.skill-cards__list {
+.work-cards__list {
   display: grid;
   grid-template:
-    "card card" max-content / 1fr 1fr;
+    "card card card" max-content / 1fr 1fr 1fr;
   grid-gap: 30px;
 }
 
-.skill-cards__item {
+.work-cards__item {
   box-shadow: 4.1px 2.9px 20px 0 rgba(0, 0, 0, 0.07);
   background-color: #ffffff;
 }
