--- a/src/admin/styles/blocks/btn.pcss
+++ b/src/admin/styles/blocks/btn.pcss
@@ -3,7 +3,6 @@
   font-weight: 600;
   color: rgba(65, 76, 99, 0.5);
 
-
   &--add-skills-group {
     font-weight: 600;
     color: #383bcf;
@@ -115,7 +114,7 @@
     color: #fff;
   }
 
-  &--work-edit {
+  &--work-card-edit {
     display: flex;
     align-items: center;
 
@@ -130,7 +129,7 @@
     }
   }
 
-  &--work-remove {
+  &--work-card-remove {
     display: flex;
     align-items: center;
 
@@ -143,6 +142,16 @@
         center center no-repeat;
       margin-left: 10px;
     }
+  }
+
+  &--upload-work-photo {
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 20px 40px !important;
+    border-radius: 25px;
+    background-image: linear-gradient(to right, #006aed, #3f35cb);
   }
 }
 
