--- a/src/admin/styles/blocks/btn.pcss
+++ b/src/admin/styles/blocks/btn.pcss
@@ -152,6 +152,39 @@
     padding: 20px 40px !important;
     border-radius: 25px;
     background-image: linear-gradient(to right, #006aed, #3f35cb);
+    line-height: 1;
+  }
+
+  &--remove-work-tag {
+    content: "";
+    display: inline-block;
+    width: 11px;
+    height: 11px;
+    background: svg-load(
+        "remove.svg",
+        fill=$text-color,
+        width=100%,
+        height=100%
+      )
+      center center no-repeat;
+  }
+
+  &--cancel-edit-work {
+    font-size: 16px;
+    font-weight: 600;
+    color: #383bcf;
+    margin-right: 60px !important;
+  }
+
+  &--save-edit-work {
+    font-size: 16px;
+    font-weight: bold;
+    color: #ffffff;
+    text-transform: uppercase;
+    padding: 20px 40px !important;
+    background-image: linear-gradient(to right, #006aed, #3f35cb);
+    border-radius: 30px;
+    line-height: 1;
   }
 }
 
