add hover effect to nav items

--- a/src/admin/styles/blocks/nav.pcss
+++ b/src/admin/styles/blocks/nav.pcss
@@ -16,4 +16,10 @@
     color: #383bcf;
     border-bottom: 3px solid #383bcf;
   }
+
+  &:not(&--active):hover {
+    font-weight: 600;
+    color: #383bcf;
+    border-bottom: 3px solid #383bcf;
+  }
 }
