--- a/src/admin/styles/blocks/btn.pcss
+++ b/src/admin/styles/blocks/btn.pcss
@@ -107,14 +107,14 @@
     color: #fff;
   }
 
-  &--add-new-work {
+  &--add-new-card {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to right, #006aed, #3f35cb);
     color: #fff;
   }
 
-  &--work-card-edit {
+  &--card-edit {
     display: flex;
     align-items: center;
 
@@ -129,7 +129,7 @@
     }
   }
 
-  &--work-card-remove {
+  &--card-remove {
     display: flex;
     align-items: center;
 
@@ -188,7 +188,7 @@
   }
 }
 
-.btn__new-work-icon {
+.btn__new-card-icon {
   display: inline-block;
   width: 150px;
   height: 150px;
@@ -210,7 +210,7 @@
   }
 }
 
-.btn__new-work-title {
+.btn__new-card-title {
   font-size: 18px;
   font-weight: bold;
   display: block;
