--- a/src/admin/styles/blocks/work-card.pcss
+++ b/src/admin/styles/blocks/work-card.pcss
@@ -1,3 +1,19 @@
+.work-card {
+  position: relative;
+  &--edit {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.5);
+    }
+  }
+}
+
 .work-card__header {
   position: relative;
 }
