stylize new review form

--- a/src/admin/styles/blocks/btn.pcss
+++ b/src/admin/styles/blocks/btn.pcss
@@ -155,7 +155,7 @@
     line-height: 1;
   }
 
-  &--remove-work-tag {
+  &--remove-tag {
     content: "";
     display: inline-block;
     width: 11px;
@@ -169,14 +169,14 @@
       center center no-repeat;
   }
 
-  &--cancel-edit-work {
+  &--cancel-edit {
     font-size: 16px;
     font-weight: 600;
     color: #383bcf;
     margin-right: 60px !important;
   }
 
-  &--save-edit-work {
+  &--save-edit {
     font-size: 16px;
     font-weight: bold;
     color: #ffffff;
@@ -185,6 +185,12 @@
     background-image: linear-gradient(to right, #006aed, #3f35cb);
     border-radius: 30px;
     line-height: 1;
+  }
+
+  &--upload-review-photo {
+    font-size: 16px;
+    font-weight: 600;
+    color: #383bcf;
   }
 }
 
