--- a/src/admin/styles/blocks/btn.pcss
+++ b/src/admin/styles/blocks/btn.pcss
@@ -192,6 +192,22 @@
     font-weight: 600;
     color: #383bcf;
   }
+
+  &--close-login-window {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    background: svg-load(
+        "remove.svg",
+        fill=$text-color,
+        width=100%,
+        height=100%
+      )
+      center center no-repeat;
+  }
 }
 
 .btn__new-card-icon {
@@ -220,4 +236,21 @@
   font-size: 18px;
   font-weight: bold;
   display: block;
+}
+
+.btn__login-submit {
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffffff;
+  background-image: linear-gradient(to right, #ad00ed, #5500f2);
+  padding: 33px 120px !important;
+  text-transform: uppercase;
+  border-radius: 5px;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  transition: opacity 0.3s;
+
+  &:hover {
+    opacity: 0.8;
+  }
 }
