--- a/src/admin/styles/base.pcss
+++ b/src/admin/styles/base.pcss
@@ -1,3 +1,13 @@
+html {
+  @include desktop {
+    font-size: 15px;
+  }
+
+  @include tablets {
+    font-size: 14px;
+  }
+}
+
 body,
 html {
   height: 100%;
