--- a/src/admin/styles/blocks/form.pcss
+++ b/src/admin/styles/blocks/form.pcss
@@ -58,10 +58,11 @@
 }
 
 .form__upload-photo-content {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+  padding: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -163,4 +164,14 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+
+  @include tablets {
+    justify-content: center;
+  }
+
+  &--review {
+    @include tablets {
+      justify-content: flex-end;
+    }
+  }
 }
