--- a/src/admin/styles/blocks/skill-card.pcss
+++ b/src/admin/styles/blocks/skill-card.pcss
@@ -40,6 +40,10 @@
   color: $text-color;
   width: 60%;
   padding-bottom: 10px;
+
+  @include tablets {
+    width: 70%;
+  }
 }
 
 .skill-card__edit-mode-btns {
