--- a/src/admin/styles/blocks/skill-card.pcss
+++ b/src/admin/styles/blocks/skill-card.pcss
@@ -44,6 +44,10 @@
   @include tablets {
     width: 70%;
   }
+
+  @include mini-tablets {
+    font-size: 16px;
+  }
 }
 
 .skill-card__edit-mode-btns {
@@ -58,6 +62,8 @@
   width: 100%;
   flex: 1;
   overflow: auto;
+  min-height: 50px;
+  margin-bottom: 20px;
 }
 
 .skill-card__footer {
