--- a/src/styles/blocks/personal-info.pcss
+++ b/src/styles/blocks/personal-info.pcss
@@ -72,7 +72,7 @@
     color: rgba(65, 76, 99, 0.3);
     padding-right: 50px;
 
-    @include mini-tablets {
+    @include big-phones {
       padding-right: 20px;
     }
   }
