--- a/src/styles/blocks/review.pcss
+++ b/src/styles/blocks/review.pcss
@@ -11,7 +11,7 @@
     flex-shrink: 0;
     margin-right: 2%;
 
-    @include mini-tablets {
+    @include big-phones {
       width: 50px;
       height: 45px;
     }
