--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -47,7 +47,7 @@
     align-items: center;
   }
 
-  @include mini-tablets {
+  @include big-phones {
     background-size: auto 26%;
   }
 
@@ -85,7 +85,7 @@
   line-height: 1.88;
 
 
-  @include mini-tablets {
+  @include big-phones {
     display: inline;
   }
 }
