--- a/src/styles/mixins.pcss
+++ b/src/styles/mixins.pcss
@@ -46,6 +46,12 @@
   }
 }
 
+@mixin big-phones() {
+  @media screen and (max-width: $bp-big-phones) {
+    @content;
+  }
+}
+
 @mixin phones() {
   @media screen and (max-width: $bp-phones) {
     @content;
