--- a/src/admin/styles/blocks/about.pcss
+++ b/src/admin/styles/blocks/about.pcss
@@ -1,8 +1,25 @@
+.about__container {
+  @include phones {
+    margin: 0;
+    width: 100%;
+  }
+}
+
 .about__heading-row {
   display: flex;
   align-items: center;
+
+  @include phones {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .about__title {
   margin-right: 60px;
+
+  @include phones {
+    margin-right: 0;
+    margin-bottom: 8%;
+  }
 }
