--- a/src/admin/styles/blocks/exit-btn.pcss
+++ b/src/admin/styles/blocks/exit-btn.pcss
@@ -1,4 +1,9 @@
 .exit-btn {
   color: rgba(255, 255, 255, 0.7);
   text-decoration: underline;
+  transition: color .3s;
+
+  &:hover {
+    color: #fff;
+  }
 }
