add change and remove of skill card

--- a/src/admin/components/about/styles/skill-card.pcss
+++ b/src/admin/components/about/styles/skill-card.pcss
@@ -5,8 +5,10 @@
   flex-direction: column;
 
   &--edit {
+
     .skill-card__title {
       border-bottom: 1px solid #000;
+      pointer-events: auto;
     }
 
     .skill-card__edit-mode-btns {
