--- a/src/admin/styles/common-blocks/btn.pcss
+++ b/src/admin/styles/common-blocks/btn.pcss
@@ -182,6 +182,7 @@
     height: 100%;
     background-image: linear-gradient(to right, #006aed, #3f35cb);
     color: #fff;
+    padding: 30px 0 !important;
 
     transition: opacity .3s;
 
