--- a/src/admin/styles/common-blocks/form.pcss
+++ b/src/admin/styles/common-blocks/form.pcss
@@ -19,6 +19,8 @@
 
 .form__upload-photo-wrapper {
   cursor: pointer;
+  display: block;
+  height: 100%;
 
   &--review {
     display: flex;
@@ -30,7 +32,9 @@
 .form__upload-photo-container {
   border: dashed 1px #a1a1a1;
   background-color: #dee4ed;
-  min-height: 50%;
+  min-height: 250px;
+  height: 50%;
+  max-height: 350px;
   position: relative;
 
   &.filled {
