--- a/src/admin/styles/common-blocks/btn.pcss
+++ b/src/admin/styles/common-blocks/btn.pcss
@@ -338,6 +338,19 @@
       right: 45px;
     }
   }
+
+  &--close-tooltip {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background: svg-load(
+        "remove.svg",
+        fill=#fff,
+        width=100%,
+        height=100%
+      )
+      center center no-repeat;
+  }
 }
 
 .btn__new-card-icon {
