--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -85,7 +85,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  height: 90%;
+  max-height: 90%;
   overflow: hidden;
   width: 20%;
   box-shadow: -30px 0px 50px -10px rgba(0, 0, 0, 0.5);
