smooth scroll via pure js

--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -1,5 +1,5 @@
 script(type="text/x-template")#reviews-list
-  section.reviews
+  section.reviews#reviews
     .reviews__slider
       .reviews__heading-row
         h2.title.title--reviews Что обо мне говорят
