--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -1,5 +1,5 @@
 script(type="text/x-template")#skills-template
-  section.skills
+  section.skills#skills
     .container.skills__container
       .skills__content-wrapper
         h2.title.title--skills.skills__title Чем я могу быть полезен вам
