--- a/src/index.pug
+++ b/src/index.pug
@@ -74,12 +74,15 @@ html(lang="ru")
                       .hamburger-menu__bar3
 
                   .mobile-menu
-                    button(type="button").mobile-menu__close
-                      +icon('remove', "mobile-menu__close-icon")
+
+                    .mobile-menu__cntrls
+                      button(type="button").mobile-menu__close
+                        +icon('remove', "mobile-menu__close-icon")
+
                     .mobile-menu__content
                       ul.mobile-menu__list
                         each item, index in navItems
-                          li.mobile-menu__item.mobile-menu__item--header
+                          li.mobile-menu__item
                             a(href=`${navAnchors[index]}`).mobile-menu__link #{item}
                       
                       .mobile__menu__socials
