--- a/src/styles/blocks/mobile-menu.pcss
+++ b/src/styles/blocks/mobile-menu.pcss
@@ -2,8 +2,57 @@
   position: fixed;
   background: #fff;
   top: 0;
-  right: 0;
   bottom: 0;
   width: 40%;
   z-index: 2000;
+  flex-direction: column;
+  display: flex;
+  right: -100%;
+  transition: .5s;
+
+  @include mini-tablets {
+    width: 50%;
+  }
+
+  @include big-phones {
+    width: 60%;
+  }
+
+  @include phones {
+    width: 100%;
+  }
+}
+
+.mobile-menu__cntrls {
+  display: flex;
+  justify-content: flex-end;
+  padding: 50px;
+  height: 10%;
+}
+
+.mobile-menu__close {
+  width: 20px;
+  height: 20px;
+}
+
+.mobile-menu__content {
+  padding: 70px;
+
+  @include phones {
+    padding: 130px 80px;
+  }
+}
+
+.mobile-menu__list {
+  margin-bottom: 50px;
+}
+
+.mobile-menu__item {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 30px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
