--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -1,5 +1,5 @@
 script(type="text/x-template")#works-component
-  section.works
+  section.works#works
     .container.works__container
       .works__content-wrapper
         h2.title.title--works.works__title Мои работы
