fix mobile menu height

--- a/src/styles/blocks/mobile-menu.pcss
+++ b/src/styles/blocks/mobile-menu.pcss
@@ -9,6 +9,9 @@
   display: flex;
   right: -100%;
   transition: .5s;
+  min-height: 650px;
+  overflow: auto;
+
 
   @include mini-tablets {
     width: 50%;
@@ -36,10 +39,10 @@
 }
 
 .mobile-menu__content {
-  padding: 70px;
+  padding: 10% 70px;
 
   @include phones {
-    padding: 130px 80px;
+    padding: 10% 80px;
   }
 }
 
